--- a/FoodService.Api/FoodService.Api.csproj
+++ b/FoodService.Api/FoodService.Api.csproj
@@ -7,7 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FoodService.Core\FoodService.Core.csproj" />
+    <ProjectReference Include="..\FoodService.Data\FoodService.Data.csproj" />
   </ItemGroup>
 
 </Project>
