--- a/.github/workflows/FoodServiceApi20240506113327.yml
+++ b/.github/workflows/FoodServiceApi20240506113327.yml
@@ -2,7 +2,7 @@ name: Build and deploy .NET Core application to Web App FoodServiceApi2024050611
 on:
   push:
     branches:
-    - main
+    - develop
 env:
   AZURE_WEBAPP_NAME: FoodServiceApi20240506113327
   AZURE_WEBAPP_PACKAGE_PATH: FoodService.Api\publish
@@ -21,7 +21,6 @@ jobs:
         dotnet-version: ${{ env.DOTNET_CORE_VERSION }}
     - name: Restore
       run: |
-        dotnet restore "${{ env.WORKING_DIRECTORY }}"
         dotnet restore "${{ env.WORKING_DIRECTORY }}" --source "https://nuget.pkg.github.com/Org-FoodService/index.json"
     - name: Build
       run: dotnet build "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-restore
