FEAT✨: #1 Added ProductController class for managing product operations
This commit introduces the ProductController class, which is responsible for handling HTTP requests related to product operations such as retrieving all products, fetching a product by its ID, creating a new product, updating an existing product, and deleting a product. The controller interacts with the ProductService through the ProductCommand interface to perform these operations.

The controller includes appropriate logging using the ILogger service to track the execution flow and any errors encountered during the processing of requests. XML comments have been added to document the purpose and parameters of each controller action for better code readability and maintainability.

Additionally, this commit updates the README.md file to reflect the changes made and clarifies that the GitHub Actions workflow (.yml) will only be executed on the main branch, ensuring consistency and stability in the deployment process.

The addition of the ProductController enhances the API's functionality by providing endpoints for managing products, improving the overall usability and effectiveness of the FoodService application.

The addition of the ProductController enhances the API's functionality by providing endpoints for managing products, improving the overall usability and effectiveness of the FoodService application.

--- a/.github/workflows/FoodServiceApi20240506113327.yml
+++ b/.github/workflows/FoodServiceApi20240506113327.yml
@@ -2,7 +2,7 @@ name: Build and deploy .NET Core application to Web App FoodServiceApi2024050611
 on:
   push:
     branches:
-      - develop
+      - main
 env:
   AZURE_WEBAPP_NAME: FoodServiceApi20240506113327
   AZURE_WEBAPP_PACKAGE_PATH: FoodService.Api\publish
