DEV: Update model FoodService.Nuget.Models

--- a/FoodService.Api/FoodService.Api.csproj
+++ b/FoodService.Api/FoodService.Api.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FoodService.Nuget.Models" Version="1.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
