Assembly and short description

--- a/FoodServiceAPI/FoodServiceAPI.csproj
+++ b/FoodServiceAPI/FoodServiceAPI.csproj
@@ -1,13 +1,24 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <AssemblyTitle>FoodServiceAPI</AssemblyTitle>
+    <AssemblyDescription></AssemblyDescription>
+    <AssemblyCompany></AssemblyCompany>
+    <AssemblyProduct></AssemblyProduct>
+    <AssemblyVersion>1.0.1.2404</AssemblyVersion>
+    <AssemblyFileVersion>1.0.1.2404</AssemblyFileVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
