--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,6 +20,8 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
+    - name: Add GitHub Packages NuGet source
+      run: dotnet nuget add source --username NicolasBuscarini --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/Org-FoodService/index.json"
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
