--- a/.github/workflows/FoodServiceApi20240506113327.yml
+++ b/.github/workflows/FoodServiceApi20240506113327.yml
@@ -5,11 +5,10 @@ on:
       - main
 env:
   AZURE_WEBAPP_NAME: FoodServiceApi20240506113327
-  AZURE_WEBAPP_PACKAGE_PATH: FoodService.Api\publish
+  AZURE_WEBAPP_PACKAGE_PATH: FoodServiceAPI\publish
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 8.0.x
-  WORKING_DIRECTORY: FoodService.Api
-  FOOD_SERVICE_MODELS_VERSION: 0.0.2
+  WORKING_DIRECTORY: FoodServiceAPI
 jobs:
   build:
     runs-on: windows-latest
