--- a/FoodServiceAPI/Properties/launchSettings.json
+++ b/FoodServiceAPI/Properties/launchSettings.json
@@ -22,7 +22,7 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
+      "launchBrowser": true,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7259;http://localhost:5164",
       "environmentVariables": {
