--- a/FoodServiceAPI.Data/FoodServiceAPI.Data.csproj
+++ b/FoodServiceAPI.Data/FoodServiceAPI.Data.csproj
@@ -6,7 +6,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="FoodService.Models" Version="1.0.8" />
+		<PackageReference Include="FoodService.Models" Version="1.0.11" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.2" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.2" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.2">
@@ -21,5 +21,8 @@
 		<PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.5.1" />
 		<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
 		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.5.1" />
+	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\FoodServiceAPI.Shared\FoodServiceAPI.Shared.csproj" />
 	</ItemGroup>
 </Project>
