--- a/FoodServiceAPI/appsettings.json
+++ b/FoodServiceAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;userid=root;pwd=root;port=3306;database=foodservice;sslmode=none;AllowPublicKeyRetrieval=True;"
+    "DefaultConnection": "Server=NICOLAS-DESKTOP\\FOODSERVICE;Initial Catalog=foodservice;Integrated Security=True;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
   },
   "EnableRequestResponseLogging": true,
   "Logging": {
