`Updated build steps and added NuGet source`
Updated the build process by modifying the `Add GitHub Packages NuGet source` step to include a new source for NuGet packages from GitHub. Added a `Restore` step that runs `dotnet restore` and a `Build with dotnet` step that runs `dotnet build --configuration Release`. Removed the previous `Restore` step that used the `DOTNET_ROOT` environment variable. The `dotnet publish` and `Upload artifact for deployment job` steps remain unchanged.

--- a/.github/workflows/azure_foodservice-api.yml
+++ b/.github/workflows/azure_foodservice-api.yml
@@ -26,11 +26,11 @@ jobs:
       - name: Add GitHub Packages NuGet source
         run: dotnet nuget add source --username NicolasBuscarini --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/Org-FoodService/index.json"
 
+      - name: Restore
+        run: dotnet restore
+
       - name: Build with dotnet
         run: dotnet build --configuration Release
-
-      - name: Restore
-        run: dotnet restore "${{ env.DOTNET_ROOT }}"
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
