--- a/FoodServiceAPI.Core/FoodServiceAPI.Core.csproj
+++ b/FoodServiceAPI.Core/FoodServiceAPI.Core.csproj
@@ -16,5 +16,8 @@
 	  <ProjectReference Include="..\FoodServiceAPI.Data\FoodServiceAPI.Data.SqlServer.csproj" />
 	  <ProjectReference Include="..\FoodServiceAPI.Shared\FoodServiceAPI.Shared.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Interface\" />
+  </ItemGroup>
 
 </Project>
